Added support for searching with FirstActionableFrame
- Added tests for FirstActionableFrameSearchPredicateService
- Added faf support into MetadataService search-based call.

--- a/FrannHammer.Services/FrannHammer.Services.csproj
+++ b/FrannHammer.Services/FrannHammer.Services.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseService.cs" />
+    <Compile Include="FirstActionableFrameSearchPredicateService.cs" />
     <Compile Include="HitboxActiveSearchPredicateService.cs" />
     <Compile Include="HitboxSearchPredicateProcessingService.cs" />
     <Compile Include="RangeMatchProcessingService.cs" />
