Refactored the rest of search predicate creation
- DataParsingService is used in all search predicate types
- SearchPredicateService is no longer abstract and contains core logic to parse types
- Types such as HitboxActiveSearchPredicate still have their own service implementation due to custom needs

--- a/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
+++ b/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
@@ -82,6 +82,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDamageSearchPredicateServiceTest.cs" />
+    <Compile Include="BaseMoveHitboxSearchPredicateServiceTest.cs" />
+    <Compile Include="DataParsingServiceTest.cs" />
     <Compile Include="FirstActionableFrameSearchPredicateServiceTest.cs" />
     <Compile Include="Harnesses\HarnessAsserts.cs" />
     <Compile Include="Harnesses\IMoveDataHarness.cs" />
