Added support for remaining searchable properties
- Added LandingLag, AutoCancels, CharacterName (uses display name)
- Created tests for both new types and enhanced a few other tests (and fixed a few bugs with range quantification checks)

--- a/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
+++ b/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
@@ -82,13 +82,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoCancelSearchPredicateServiceTest.cs" />
     <Compile Include="BaseMoveHitboxSearchPredicateServiceTest.cs" />
+    <Compile Include="CharacterNameSearchPredicateServiceTest.cs" />
     <Compile Include="DataParsingServiceTest.cs" />
     <Compile Include="Harnesses\HarnessAsserts.cs" />
     <Compile Include="Harnesses\IMoveDataHarness.cs" />
     <Compile Include="Harnesses\IMetadataHarness.cs" />
     <Compile Include="Harnesses\MetadataHarness.cs" />
     <Compile Include="HitboxActiveSearchPredicateServiceTest.cs" />
+    <Compile Include="LandingLagSearchPredicateServiceTest.cs" />
     <Compile Include="NameSearchPredicateServiceTest.cs" />
     <Compile Include="RangeQuantifierServiceTest.cs" />
     <Compile Include="Suts\MoveDataSut.cs" />
