--- a/FrannHammer.Services/FrannHammer.Services.csproj
+++ b/FrannHammer.Services/FrannHammer.Services.csproj
@@ -62,11 +62,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoCancelSearchPredicateService.cs" />
     <Compile Include="BaseDamageSearchPredicateService.cs" />
     <Compile Include="BaseService.cs" />
+    <Compile Include="CharacterNameSearchPredicateService.cs" />
     <Compile Include="DataParsingService.cs" />
     <Compile Include="FirstActionableFrameSearchPredicateService.cs" />
     <Compile Include="HitboxActiveSearchPredicateService.cs" />
+    <Compile Include="LandingLagSearchPredicateService.cs" />
     <Compile Include="RangeMatchProcessingService.cs" />
     <Compile Include="RangeQuantifierService.cs" />
     <Compile Include="Exceptions\EntityNotFoundException.cs" />
