--- a/FrannHammer.Models/FrannHammer.Models.csproj
+++ b/FrannHammer.Models/FrannHammer.Models.csproj
@@ -99,7 +99,7 @@
     <Compile Include="MoveMetadataModels.cs" />
     <Compile Include="MoveType.cs" />
     <Compile Include="Notation.cs" />
-    <Compile Include="NumbeRange.cs" />
+    <Compile Include="NumberRange.cs" />
     <Compile Include="ProblemModels.cs" />
     <Compile Include="RangeModel.cs" />
     <Compile Include="RangeQuantifier.cs" />
