Initial test passing for round trip to database with search criteria
- Revamped string-based searches to be case-insensitive
- Wrote first passing test that creates a ComplexMoveSearchModel for full logic circuit (db search and back as DTO)
- Modified HarnessAsserts to look for keys in a case-insensitive manner
- Refactored ServiceBaseTest to have constants for field values on dto fields
- Completed circuit in MetadataService for using all properties in a ComplexMoveSearchModel object to find valid moves in the database and return them.

--- a/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
+++ b/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Harnesses\MetadataHarness.cs" />
     <Compile Include="HitboxActiveSearchPredicateServiceTest.cs" />
     <Compile Include="LandingLagSearchPredicateServiceTest.cs" />
+    <Compile Include="MetadataServiceSearchTest.cs" />
     <Compile Include="NameSearchPredicateServiceTest.cs" />
     <Compile Include="RangeQuantifierServiceTest.cs" />
     <Compile Include="Suts\MoveDataSut.cs" />
