Added support for hitbox length active in search
- Hitbox active length (in frames) is now supported with a RangeModel property on the ComplexMoveSearchModel object
- This required overriding the SearchPredicateService class's IsValueInRange() due to the new reqs of gathering the total number of active frames in a range of a single hitbox.

--- a/FrannHammer.Services/FrannHammer.Services.csproj
+++ b/FrannHammer.Services/FrannHammer.Services.csproj
@@ -68,6 +68,7 @@
     <Compile Include="CharacterNameSearchPredicateService.cs" />
     <Compile Include="DataParsingService.cs" />
     <Compile Include="FirstActionableFrameSearchPredicateService.cs" />
+    <Compile Include="HitboxActiveLengthSearchPredicateService.cs" />
     <Compile Include="HitboxActiveSearchPredicateService.cs" />
     <Compile Include="LandingLagSearchPredicateService.cs" />
     <Compile Include="RangeMatchProcessingService.cs" />
