--- a/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
+++ b/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Harnesses\IMoveDataHarness.cs" />
     <Compile Include="Harnesses\IMetadataHarness.cs" />
     <Compile Include="Harnesses\MetadataHarness.cs" />
+    <Compile Include="Harnesses\MoveSearchHarness.cs" />
     <Compile Include="HitboxActiveSearchPredicateServiceTest.cs" />
     <Compile Include="LandingLagSearchPredicateServiceTest.cs" />
     <Compile Include="MetadataServiceSearchTest.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="MetadataServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Suts\MetadataSut.cs" />
+    <Compile Include="Suts\MoveSearchSut.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
