--- a/FrannHammer.Api/packages.config
+++ b/FrannHammer.Api/packages.config
@@ -48,8 +48,10 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="redis-64" version="3.0.503" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="secure-file" version="1.0.31" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.1.608" targetFramework="net45" />
   <package id="Swashbuckle.Core" version="5.4.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net45" />
   <package id="WebApiThrottle" version="1.4.3" targetFramework="net45" />
