--- a/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
+++ b/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
@@ -62,6 +62,10 @@
       <HintPath>..\packages\Moq.4.5.21\lib\net45\Moq.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NMemory, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6a46696d54971e6d, processorArchitecture=MSIL">
       <HintPath>..\packages\NMemory.1.1.0\lib\net45\NMemory.dll</HintPath>
       <Private>True</Private>
@@ -70,9 +74,14 @@
       <HintPath>..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="StackExchange.Redis, Version=1.1.608.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\StackExchange.Redis.1.1.608\lib\net45\StackExchange.Redis.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -94,6 +103,7 @@
     <Compile Include="MoveSearch\HitboxActiveSearchPredicateServiceTest.cs" />
     <Compile Include="MoveSearch\LandingLagSearchPredicateServiceTest.cs" />
     <Compile Include="MoveSearch\MetadataServiceSearchTest.cs" />
+    <Compile Include="MoveSearch\MoveSearchModelRedisServiceTest.cs" />
     <Compile Include="MoveSearch\NameSearchPredicateServiceTest.cs" />
     <Compile Include="MoveSearch\RangeQuantifierServiceTest.cs" />
     <Compile Include="Suts\MoveDataSut.cs" />
