--- a/FrannHammer.Services.Tests/packages.config
+++ b/FrannHammer.Services.Tests/packages.config
@@ -7,6 +7,8 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Moq" version="4.5.21" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NMemory" version="1.1.0" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
+  <package id="StackExchange.Redis" version="1.1.608" targetFramework="net452" />
 </packages>
