Fixed two bugs and general refactoring
- Fixed an issue with non-integer value move data parsing (now parsing to double and rounding to int when comparing)
- Fixed an issue where move search results would return invalid results in a specific scenario (found some move results initially, then cleared them all out when comparing using additional specified criteria.  This would essentially reset the list and the next criteria would be added even though the previous criteria eliminated all valid results)
- Renamed RangeQuantifier enum to RangeConstraint
- Created MoveSearchResultCollection to hold state of whether or not the search results object has been initialized (also wraps a List<T>)

--- a/FrannHammer.Models/FrannHammer.Models.csproj
+++ b/FrannHammer.Models/FrannHammer.Models.csproj
@@ -97,12 +97,13 @@
     <Compile Include="Move.cs" />
     <Compile Include="Movement.cs" />
     <Compile Include="MoveMetadataModels.cs" />
+    <Compile Include="MoveSearchResultCollection.cs" />
     <Compile Include="MoveType.cs" />
     <Compile Include="Notation.cs" />
     <Compile Include="NumberRange.cs" />
     <Compile Include="ProblemModels.cs" />
     <Compile Include="RangeModel.cs" />
-    <Compile Include="RangeQuantifier.cs" />
+    <Compile Include="RangeConstraint.cs" />
     <Compile Include="RoleBindingModel.cs" />
     <Compile Include="SetKnockback.cs" />
     <Compile Include="SmashAttributeType.cs" />
