Adding in packages.config for cake

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ FrannHammer.Api.Data.Tests/ConnectionStringsTest.config
 ConnectionStringsTest.config
 **/buildArtifacts/**/*
 **/tools/**/*
+!/tools/packages.config
