For some reason the csproj files didn't get pushed

--- a/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
+++ b/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
@@ -86,6 +86,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BaseDataIntegrityTest.cs" />
+    <Compile Include="Categories.cs" />
     <Compile Include="CharacterDbToKhIntegrityTest.cs" />
     <Compile Include="CharacterIntegrityTest.cs" />
     <Compile Include="MoveDbToKhIntegrityTest.cs" />
