--- a/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
+++ b/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categories.cs" />
     <Compile Include="MoveSearch\AutoCancelSearchPredicateServiceTest.cs" />
     <Compile Include="MoveSearch\BaseMoveHitboxSearchPredicateServiceTest.cs" />
     <Compile Include="MoveSearch\CharacterNameSearchPredicateServiceTest.cs" />
