Adding solutioninfo file for all master projects

--- a/FrannHammer.Api/FrannHammer.Api.csproj
+++ b/FrannHammer.Api/FrannHammer.Api.csproj
@@ -214,6 +214,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="ActionFilterAttributes\ValidateModelAttribute.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
