--- a/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
+++ b/FrannHammer.Services.Tests/FrannHammer.Services.Tests.csproj
@@ -91,6 +91,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="Categories.cs" />
     <Compile Include="MoveSearch\AutoCancelSearchPredicateServiceTest.cs" />
     <Compile Include="MoveSearch\BaseMoveHitboxSearchPredicateServiceTest.cs" />
