--- a/FrannHammer.Core.Tests/FrannHammer.Core.Tests.csproj
+++ b/FrannHammer.Core.Tests/FrannHammer.Core.Tests.csproj
@@ -51,6 +51,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="CalculateTest.cs" />
     <Compile Include="DtoBuilderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
