--- a/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
+++ b/FrannHammer.Api.Data.Tests/FrannHammer.Api.Data.Tests.csproj
@@ -85,6 +85,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="BaseDataIntegrityTest.cs" />
     <Compile Include="Categories.cs" />
     <Compile Include="CharacterDbToKhIntegrityTest.cs" />
