--- a/FrannHammer.DataSynchro/FrannHammer.DataSynchro.csproj
+++ b/FrannHammer.DataSynchro/FrannHammer.DataSynchro.csproj
@@ -65,6 +65,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="CharacterMetadataTypes.cs" />
     <Compile Include="CharacterWindow.xaml.cs">
       <DependentUpon>CharacterWindow.xaml</DependentUpon>
