--- a/FrannHammer.Models/FrannHammer.Models.csproj
+++ b/FrannHammer.Models/FrannHammer.Models.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Character.cs" />
     <Compile Include="CharacterAttributeModels.cs" />
     <Compile Include="CharacterAttributeType.cs" />
+    <Compile Include="DTOs\AggregateCharacterData.cs" />
     <Compile Include="MoveSearchModel.cs" />
     <Compile Include="DTOs\BaseMoveHitboxMetaDto.cs" />
     <Compile Include="DTOs\CalculatorDtos.cs" />
