--- a/FrannHammer.Api.Data.Tests/packages.config
+++ b/FrannHammer.Api.Data.Tests/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="NMemory" version="1.1.0" targetFramework="net452" />
   <package id="NUnit" version="3.4.1" targetFramework="net452" />
+  <package id="StackExchange.Redis" version="1.1.608" targetFramework="net452" />
 </packages>
