- Added db table for FirstActionableFrame for Moves - Refactored MetadataService.GetDetailsForMovesOfCharacter to use new FirstActionableFrame model object - Created a FirstActionableFrames controller to serve FAF data like other move attribute controllers - Updated seeder to include FAF table data when seeding db

--- a/FrannHammer.Models/FrannHammer.Models.csproj
+++ b/FrannHammer.Models/FrannHammer.Models.csproj
@@ -90,6 +90,7 @@
     <Compile Include="CharacterAttributeType.cs" />
     <Compile Include="DTOs\AggregateCharacterData.cs" />
     <Compile Include="DTOs\DetailedMoveDto.cs" />
+    <Compile Include="FirstActionableFrame.cs" />
     <Compile Include="MoveSearchModel.cs" />
     <Compile Include="DTOs\BaseMoveHitboxMetaDto.cs" />
     <Compile Include="DTOs\CalculatorDtos.cs" />
