--- a/FrannHammer.Api/FrannHammer.Api.csproj
+++ b/FrannHammer.Api/FrannHammer.Api.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Controllers\CharacterAttributesController.cs" />
     <Compile Include="Controllers\CharacterAttributeTypesController.cs" />
     <Compile Include="Controllers\CharactersController.cs" />
+    <Compile Include="Controllers\FirstActionableFramesController.cs" />
     <Compile Include="Controllers\HitboxesController.cs" />
     <Compile Include="Controllers\KnockbackGrowthsController.cs" />
     <Compile Include="Controllers\MovementsController.cs" />
@@ -262,6 +263,14 @@
     <Compile Include="Migrations\201701040146167_fullurl added to character.cs" />
     <Compile Include="Migrations\201701040146167_fullurl added to character.Designer.cs">
       <DependentUpon>201701040146167_fullurl added to character.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702110332294_faf-table.cs" />
+    <Compile Include="Migrations\201702110332294_faf-table.Designer.cs">
+      <DependentUpon>201702110332294_faf-table.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702110413206_faf-support-2.cs" />
+    <Compile Include="Migrations\201702110413206_faf-support-2.Designer.cs">
+      <DependentUpon>201702110413206_faf-support-2.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ModelFactory.cs" />
@@ -312,6 +321,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701040146167_fullurl added to character.resx">
       <DependentUpon>201701040146167_fullurl added to character.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702110332294_faf-table.resx">
+      <DependentUpon>201702110332294_faf-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702110413206_faf-support-2.resx">
+      <DependentUpon>201702110413206_faf-support-2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SwaggerExtensions\onComplete.js" />
     <Content Include="Web.config" />
