--- a/FrannHammer.Api/FrannHammer.Api.csproj
+++ b/FrannHammer.Api/FrannHammer.Api.csproj
@@ -278,6 +278,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="SwaggerExtensions\SwaggerAccessDocumentFilter.cs" />
     <Compile Include="TelemetryProcessorFilters\ExcludedDataFilter.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -329,6 +330,7 @@
       <DependentUpon>201702110413206_faf-support-2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SwaggerExtensions\onComplete.js" />
+    <EmbeddedResource Include="SwaggerExtensions\swagger.styles.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
