- Refactored Attribute Scraping to be much more modular (allowing for easy expansion of attribute scraping in the future).
Instead of a default attribute scraping service that gets all types of attributes, there is a default delegate for scraping attributes.  This delegate can be overridden so that calling the new Scrape() scrapes whatever data is needed.

An example of how this works can be found in AttributeScrapingServiceIntegrationTests.cs in the WebScraping.Tests project.

--- a/FrannHammer.WebScraping.Contracts/FrannHammer.WebScraping.Contracts.csproj
+++ b/FrannHammer.WebScraping.Contracts/FrannHammer.WebScraping.Contracts.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAttributeProvider.cs" />
+    <Compile Include="IAttributeScraper.cs" />
     <Compile Include="IAttributeScrapingService.cs" />
     <Compile Include="ICharacterDataScrapingService.cs" />
     <Compile Include="IHtmlDoc.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="IMoveProvider.cs" />
     <Compile Include="IMoveScrapingService.cs" />
     <Compile Include="IPageDownloader.cs" />
+    <Compile Include="IScrapingServices.cs" />
     <Compile Include="IUniqueDataScrapingService.cs" />
     <Compile Include="IWebClientProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
