--- a/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
+++ b/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttributeScrapingServiceIntegrationTests.cs" />
     <Compile Include="CharacterDataScrapingServiceIntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
