- Refactored v060 support for scraping movements and moves.  Each is much more modular now (can get specific types of moves).  Additional cleanup will happen soon.
- Added integration tests for default movement and move scraping (all types) implementations.

- Deleted WebMovement as it wasn't used and is no longer necessary.

--- a/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
+++ b/FrannHammer.WebScraping.Tests/FrannHammer.WebScraping.Tests.csproj
@@ -46,6 +46,8 @@
   <ItemGroup>
     <Compile Include="AttributeScrapingServiceIntegrationTests.cs" />
     <Compile Include="CharacterDataScrapingServiceIntegrationTests.cs" />
+    <Compile Include="MovementScrapingServiceIntegrationTests.cs" />
+    <Compile Include="MoveScrapingServiceIntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
