- Added moves controller and move api service support - Refactored repository test setup code to reflect over model type properties properly (instance | public binding flags instead of static | public).  It's dumb that mongodb's setelementname method for mapping properties can't set to a base class.  Going to need to duplicate base model property implementations (will look into this further). - Combined some controller tests that used to be inflating the amount of files for testing for no reason.

--- a/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
+++ b/FrannHammer.Api.Services.Contracts/FrannHammer.Api.Services.Contracts.csproj
@@ -48,6 +48,7 @@
     <Compile Include="IDataRetrievalService.cs" />
     <Compile Include="IDataUpdaterService.cs" />
     <Compile Include="IMoveDataHandler.cs" />
+    <Compile Include="IMoveService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
