--- a/FrannHammer.WebApi.MongoDb.Integration.Tests/FrannHammer.WebApi.MongoDb.Integration.Tests.csproj
+++ b/FrannHammer.WebApi.MongoDb.Integration.Tests/FrannHammer.WebApi.MongoDb.Integration.Tests.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterRepositoryTests.cs" />
+    <Compile Include="MoveRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
