- added support for getting moves and movement data - Refactored repository tests to use a new base class that configured connection so it does not need to be duplicated inside each repository test class - Added tests to ensure friendly name values are expected on model implementations

--- a/FrannHammer.DataAccess.MongoDb.Tests/FrannHammer.DataAccess.MongoDb.Tests.csproj
+++ b/FrannHammer.DataAccess.MongoDb.Tests/FrannHammer.DataAccess.MongoDb.Tests.csproj
@@ -60,8 +60,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseRepositoryTests.cs" />
     <Compile Include="CharacterAttributeRepositoryTests.cs" />
     <Compile Include="CharacterRepositoryTests.cs" />
+    <Compile Include="MovementRepositoryTests.cs" />
+    <Compile Include="MoveRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
