--- a/FrannHammer.Domain/FrannHammer.Domain.csproj
+++ b/FrannHammer.Domain/FrannHammer.Domain.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CharacterAttribute.cs" />
     <Compile Include="DefaultCharacterAttributeRow.cs" />
     <Compile Include="FriendlyNameAttribute.cs" />
+    <Compile Include="FriendlyNameCommonConstants.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Movement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
