--- a/FrannHammer.WebApi/FrannHammer.WebApi.csproj
+++ b/FrannHammer.WebApi/FrannHammer.WebApi.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Controllers\CharacterAttributeController.cs" />
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\MoveController.cs" />
+    <Compile Include="Controllers\MovementController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
